--- a/public/styles/partials/page-lading.css
+++ b/public/styles/partials/page-lading.css
@@ -117,14 +117,16 @@
     grid-area: logo;
     text-align: initial;
     align-self: center;
+    margin: 0;
   }
 
   .logo-container img {
-    height: 100%;
+    height: 127px;
   }
 
   .hero-image {
     grid-area: image;
+    height: 350px;
   }
 
   .buttons-container {
