--- a/public/styles/partials/page-lading.css
+++ b/public/styles/partials/page-lading.css
@@ -1,7 +1,3 @@
-:root {
-  font-size: 40%; /**/
-}
-
 #page-landing {
   background-color: var(--color-primary);
 }
@@ -97,3 +93,49 @@
   font-weight: 400;
   line-height: 20px;
 }
+
+@media (max-width: 699px) {
+  :root {
+    font-size: 40%; /* modificar as medidas rem */
+  }
+}
+
+/* Largura minima de até 1100px - Abaixo de 1100px - 1100px +*/
+@media (min-width: 1100px) {
+  #page-landing #container {
+    max-width: 1100px;
+
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+    grid-template-rows: 350px 1fr;
+    grid-template-areas: "logo image image" "button button footer";
+
+    gap: 60px;
+  }
+
+  .logo-container {
+    grid-area: logo;
+    text-align: initial;
+    align-self: center;
+  }
+
+  .logo-container img {
+    height: 100%;
+  }
+
+  .hero-image {
+    grid-area: image;
+  }
+
+  .buttons-container {
+    grid-area: button;
+    justify-content: flex-start;
+  }
+
+  .total-connections {
+    grid-area: footer;
+    justify-self: flex-end;
+  }
+}
+
+/* 700px até 1100px */
