--- a/public/styles/partials/page-study.css
+++ b/public/styles/partials/page-study.css
@@ -37,6 +37,8 @@
 .page-header .header-content {
   width: 90%;
   margin: 3.2rem auto;
+
+  position: relative;
 }
 
 .page-header .header-content strong {
@@ -162,7 +164,7 @@
   line-height: 26px;
 }
 
-.teacher-item p {
+.teacher-item > p {
   padding: 0 2rem;
   font-size: 1.6rem;
   line-height: 2.8rem;
@@ -215,4 +217,72 @@
 
 .teacher-item footer button:hover {
   background-color: var(--color-secondary-dark);
+}
+
+@media (min-width: 700px) {
+  #page-study #container {
+    max-width: 100vw;
+  }
+
+  .page-header {
+    height: 340px;
+  }
+
+  .page-header .top-bar-container {
+    max-width: 1100px;
+  }
+
+  .page-header .header-content {
+    max-width: 740px;
+    padding-bottom: 48px;
+    margin: 0 auto;
+
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    justify-content: center;
+  }
+
+  .page-header .header-content strong {
+    max-width: 350px;
+  }
+
+  #search-teachers {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 16px;
+
+    position: absolute;
+    bottom: -28px;
+  }
+
+  .teacher-item header,
+  .teacher-item footer {
+    padding: 32px;
+  }
+
+  #page-study main {
+    padding: 32px 0;
+    max-width: 740px;
+    margin: 0 auto;
+  }
+
+  #search-teachers .select-block {
+    margin-bottom: 0;
+  }
+
+  .teacher-item > p {
+    padding: 0 32px;
+  }
+
+  .teacher-item footer p strong {
+    display: initial;
+    margin-left: 1.6rem;
+  }
+
+  .teacher-item footer button {
+    width: 245px;
+    justify-content: center;
+    gap: 1.6rem;
+  }
 }
