--- a/public/styles/partials/page-give-classes.css
+++ b/public/styles/partials/page-give-classes.css
@@ -37,6 +37,25 @@
   border-bottom: 1px solid var(--color-line-in-white);
 }
 
+#page-give-classes fieldset legend button {
+  background-color: transparent;
+  border: 0;
+
+  color: var(--color-primary);
+  font-size: 1.8rem;
+  font-family: "Archivo";
+  font-weight: 700;
+  line-height: 26px;
+
+  cursor: pointer;
+
+  transition: 0.2s;
+}
+
+#page-give-classes fieldset legend button:hover {
+  color: var(--color-primary-dark);
+}
+
 #page-give-classes fieldset + fieldset {
   margin-top: 6.4rem;
 }
@@ -51,6 +70,13 @@
 
 #page-give-classes .select-block + .input-block {
   margin-top: 2.4rem;
+}
+
+#page-give-classes footer {
+  padding: 4rem 2.4rem;
+  background-color: var(--color-box-footer);
+  border-top: 1px solid var(--color-line-in-white);
+  margin-top: 6.4rem;
 }
 
 @media (min-width: 700px) {
