--- a/public/styles/partials/page-give-classes.css
+++ b/public/styles/partials/page-give-classes.css
@@ -79,6 +79,50 @@
   margin-top: 6.4rem;
 }
 
+#page-give-classes footer p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  color: var(--color-text-complement);
+}
+
+#page-give-classes footer button {
+  width: 100%;
+  height: 5.6rem;
+  background-color: var(--color-secondary);
+  color: var(--color-button-text);
+  border: 0;
+  border-radius: 0.8rem;
+  cursor: pointer;
+
+  font-size: 2rem;
+  font-family: "Archivo";
+  font-weight: 700;
+  line-height: 26px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  transform: 0.2s;
+
+  margin-top: 3.2rem;
+}
+
+#page-give-classes footer button:hover {
+  background-color: var(--color-secondary-dark);
+}
+
+.schedule-item + .schedule-item {
+  margin-top: 3.2rem;
+  padding-top: 3.2rem;
+  border-top: 1px solid var(--color-line-in-white);
+}
+
 @media (min-width: 700px) {
   #page-give-classes #container {
     max-width: 100vw;
