refactoring all to use server nodejs

--- a/src/views/study.html
+++ b/src/views/study.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./public/styles/main.css" />
-    <link rel="stylesheet" href="./public/styles/partials/header.css" />
-    <link rel="stylesheet" href="./public/styles/partials/forms.css" />
-    <link rel="stylesheet" href="./public/styles/partials/page-study.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/partials/header.css" />
+    <link rel="stylesheet" href="/styles/partials/forms.css" />
+    <link rel="stylesheet" href="/styles/partials/page-study.css" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -28,12 +28,12 @@
         <div class="top-bar-container">
           <a href="/">
             <img
-              src="/public/images/icons/back.svg"
+              src="/images/icons/back.svg"
               alt="Voltar para pagina inicial"
             />
           </a>
 
-          <img src="/public/images/logo.svg" alt="Logo Proffy" />
+          <img src="/images/logo.svg" alt="Logo Proffy" />
         </div>
 
         <div class="header-content">
@@ -102,7 +102,7 @@
               <strong>R$ 20,00</strong>
             </p>
             <button type="button">
-              <img src="/public/images/icons/whatsapp.svg" alt="" />
+              <img src="/images/icons/whatsapp.svg" alt="" />
               <span>Entrar em contato</span>
             </button>
           </footer>
@@ -131,7 +131,7 @@
               <strong>R$ 20,00</strong>
             </p>
             <button type="button">
-              <img src="/public/images/icons/whatsapp.svg" alt="" />
+              <img src="/images/icons/whatsapp.svg" alt="" />
               <span>Entrar em contato</span>
             </button>
           </footer>
@@ -139,6 +139,6 @@
       </main>
     </div>
 
-    <script src="/public/scripts/main.js"></script>
+    <script src="/scripts/main.js"></script>
   </body>
 </html>
