--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -6,13 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./public/styles/main.css" />
-    <link rel="stylesheet" href="./public/styles/partials/forms.css" />
-    <link rel="stylesheet" href="./public/styles/partials/header.css" />
-    <link
-      rel="stylesheet"
-      href="./public/styles/partials/page-give-classes.css"
-    />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/partials/forms.css" />
+    <link rel="stylesheet" href="/styles/partials/header.css" />
+    <link rel="stylesheet" href="/styles/partials/page-give-classes.css" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -31,12 +28,12 @@
         <div class="top-bar-container">
           <a href="/">
             <img
-              src="/public/images/icons/back.svg"
+              src="/images/icons/back.svg"
               alt="Voltar para pagina inicial"
             />
           </a>
 
-          <img src="/public/images/logo.svg" alt="Logo Proffy" />
+          <img src="/images/logo.svg" alt="Logo Proffy" />
         </div>
 
         <div class="header-content">
@@ -145,10 +142,7 @@
 
         <footer>
           <p>
-            <img
-              src="/public/images/icons/warning.svg"
-              alt="Aviso importante"
-            />
+            <img src="/images/icons/warning.svg" alt="Aviso importante" />
             <span>
               Importante!! <br />
               preencha todos os dados
@@ -164,6 +158,6 @@
       </main>
     </div>
 
-    <script src="/public/scripts/main.js"></script>
+    <script src="/scripts/main.js"></script>
   </body>
 </html>
