--- a/src/views/index.html
+++ b/src/views/index.html
@@ -13,8 +13,9 @@
     />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./public/styles/main.css" />
-    <link rel="stylesheet" href="./public/styles/partials/page-lading.css" />
+    <!-- <link rel="stylesheet" href="./public/styles/main.css" /> -->
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/partials/page-lading.css" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -30,30 +31,30 @@
   <body id="page-landing">
     <div id="container">
       <div class="logo-container">
-        <img src="/public//images/logo.svg" alt="Proffy" />
+        <img src="/images/logo.svg" alt="Proffy" />
         <h2>Sua plataforma de estudos online.</h2>
       </div>
 
       <img
-        src="/public/images/landing.svg"
+        src="/images/landing.svg"
         alt="plataforma de estudos online"
         class="hero-image"
       />
 
       <div class="buttons-container">
-        <a href="study.html" class="study">
-          <img src="/public//images/icons/study.svg" alt="Estudar" />
+        <a href="study" class="study">
+          <img src="/images/icons/study.svg" alt="Estudar" />
           <span>Estudar</span>
         </a>
-        <a href="give-classes.html" class="give-classes">
-          <img src="/public//images/icons/give-classes.svg" alt="Dar aulas" />
+        <a href="give-classes" class="give-classes">
+          <img src="/images/icons/give-classes.svg" alt="Dar aulas" />
           <span>Dar aulas</span>
         </a>
       </div>
 
       <p class="total-connections">
         <span> Total de 200 conexões já realizadas</span>
-        <img src="/public/images/icons/purple-heart.svg" alt="Coração roxo" />
+        <img src="/images/icons/purple-heart.svg" alt="Coração roxo" />
       </p>
     </div>
 
