--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -78,16 +78,16 @@
               <label for="subject">Materia</label>
               <select name="subject" id="subject" required>
                 <option value="">Selecione uma opção</option>
-                <option value="1">Artes</option>
-                <option value="2">Biologia</option>
-                <option value="3">Ciências</option>
-                <option value="4">Educação física</option>
-                <option value="5">Física</option>
-                <option value="6">Geografia</option>
-                <option value="7">História</option>
-                <option value="8">Matemática</option>
-                <option value="9">Português</option>
-                <option value="10">Química</option>
+                <option value="0">Artes</option>
+                <option value="1">Biologia</option>
+                <option value="2">Ciências</option>
+                <option value="3">Educação física</option>
+                <option value="4">Física</option>
+                <option value="5">Geografia</option>
+                <option value="6">História</option>
+                <option value="7">Matemática</option>
+                <option value="8">Português</option>
+                <option value="9">Química</option>
               </select>
             </div>
             <div class="input-block">
@@ -102,9 +102,7 @@
           <fieldset id="schedule-items">
             <legend>
               <span> Horários disponíveis </span>
-              <button id="add-time" type="button" onclick="">
-                + Novo horário
-              </button>
+              <button id="add-time" type="button">+ Novo horário</button>
             </legend>
 
             <div class="schedule-item">
@@ -118,12 +116,12 @@
                   <option value="" disabled hidden="">
                     Selecione uma opção
                   </option>
-                  <option value="1">Domingo</option>
-                  <option value="2">Segunda</option>
-                  <option value="3">Terça</option>
-                  <option value="4">Quarta</option>
-                  <option value="5">Quinta</option>
-                  <option value="6">Sexta</option>
+                  <option value="0">Domingo</option>
+                  <option value="1">Segunda</option>
+                  <option value="2">Terça</option>
+                  <option value="3">Quarta</option>
+                  <option value="4">Quinta</option>
+                  <option value="5">Sexta</option>
                   <option value="6">Sábado</option>
                 </select>
               </div>
