--- a/public/styles/partials/page-study.css
+++ b/public/styles/partials/page-study.css
@@ -111,7 +111,7 @@
   display: block;
 }
 
-.teacher-item footer button {
+.teacher-item footer .button {
   width: 20rem;
   height: 5.6rem;
   background-color: var(--color-secondary);
@@ -128,11 +128,12 @@
   justify-content: space-evenly;
 
   transition: background 0.2s;
+  text-decoration: none;
 
   margin-left: 1.6rem;
 }
 
-.teacher-item footer button:hover {
+.teacher-item footer .button:hover {
   background-color: var(--color-secondary-dark);
 }
 
