--- a/src/views/study.html
+++ b/src/views/study.html
@@ -62,8 +62,8 @@
 
               {% for weekday in weekdays %}
               <option
-                value="{{loop.index}}"
-                {{"selected" if filters.weekday == loop.index}}>
+                value="{{loop.index0}}"
+                {{"selected" if filters.weekday == loop.index0}}>
                  {{weekday}}
               </option>
               {% endfor %}
