--- a/public/styles/partials/home-page.css
+++ b/public/styles/partials/home-page.css
@@ -86,3 +86,44 @@
   margin: 3.2rem 0;
   gap: 1.6rem;
 }
+
+/* Maior que 1100px */
+@media (min-width: 1100px) {
+  #home-page #container {
+    max-width: 1100px;
+
+    display: grid;
+    grid-template-rows: 350px 1fr;
+    grid-template-columns: 2fr 1fr 1fr;
+
+    grid-template-areas: "logo hero hero" "buttons buttons text";
+    gap: 6rem;
+  }
+
+  .logo {
+    grid-area: logo;
+    text-align: initial;
+
+    align-self: center;
+  }
+
+  .logo img {
+    height: 100%;
+  }
+
+  .hero-image {
+    grid-area: hero;
+    align-self: center;
+  }
+
+  .buttons-container {
+    grid-area: buttons;
+
+    justify-content: flex-start;
+  }
+
+  .total-connections {
+    grid-area: text;
+    align-self: end;
+  }
+}
