--- a/public/styles/partials/home-page.css
+++ b/public/styles/partials/home-page.css
@@ -1,7 +1,3 @@
-:root {
-  font-size: 40%; /* modificar as medidas rem */
-}
-
 #home-page {
   background: var(--color-primary);
 }
@@ -87,6 +83,17 @@
   gap: 1.6rem;
 }
 
+/* Abaixo de 700px */
+@media (max-width: 1100px) {
+  :root {
+    font-size: 40%; /* modificar as medidas rem */
+  }
+
+  .hero-image {
+    height: 45rem;
+  }
+}
+
 /* Maior que 1100px */
 @media (min-width: 1100px) {
   #home-page #container {
@@ -104,16 +111,18 @@
     grid-area: logo;
     text-align: initial;
 
+    margin: 0;
     align-self: center;
   }
 
   .logo img {
-    height: 100%;
+    height: 127px;
   }
 
   .hero-image {
     grid-area: hero;
     align-self: center;
+    height: 350px;
   }
 
   .buttons-container {
@@ -124,6 +133,7 @@
 
   .total-connections {
     grid-area: text;
-    align-self: end;
+    align-self: center;
+    font-size: 1.2rem;
   }
 }
