--- a/public/styles/partials/study-page.css
+++ b/public/styles/partials/study-page.css
@@ -37,7 +37,9 @@
 
 .page-header .header-content {
   width: 90%;
-  margin: 0 auto;
+  margin: 3.2rem auto;
+
+  position: relative;
 }
 
 .page-header .header-content strong {
@@ -164,7 +166,7 @@
   line-height: 26px;
 }
 
-.teacher-item p {
+.teacher-item > p {
   padding: 0 2rem;
   font-size: 1.4rem;
   line-height: 2.8rem;
@@ -218,4 +220,73 @@
 
 .teacher-item footer button:hover {
   background-color: var(--color-secondary-dark);
+}
+
+/* 700px pra cima */
+@media (min-width: 700px) {
+  #study-page #container {
+    max-width: 100vw;
+  }
+
+  .page-header {
+    height: 340px;
+  }
+
+  .page-header .top-bar-container {
+    max-width: 1100px;
+  }
+
+  .page-header .header-content {
+    max-width: 740px;
+
+    margin: 0 auto;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 1;
+    padding-bottom: 48px;
+  }
+
+  .page-header .header-content strong {
+    max-width: 350px;
+  }
+
+  .teacher-item header,
+  .teacher-item footer {
+    padding: 32px;
+  }
+
+  #search-teachers {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 16px;
+
+    position: absolute;
+    bottom: -48px;
+  }
+
+  #study-page main {
+    max-width: 740px;
+
+    margin: 0 auto;
+    padding: 32px 0;
+  }
+
+  .teacher-item > p {
+    padding: 12px;
+  }
+
+  .teacher-item footer p strong {
+    display: initial;
+    margin-left: 16px;
+  }
+
+  .teacher-item footer button {
+    width: 245px;
+    font-size: 16px;
+
+    justify-content: center;
+    gap: 16px;
+  }
 }
