--- a/src/views/study.html
+++ b/src/views/study.html
@@ -43,16 +43,11 @@
               <select name="subject" id="subject">
                 <option value="" disabled hidden>Selecione uma opção</option>
 
-                <option value="1">Química</option>
-                <option value="2">Artes</option>
-                <option value="3">Biologia</option>
-                <option value="4">Ciências</option>
-                <option value="5">Educação física</option>
-                <option value="6">Física</option>
-                <option value="7">Geografia</option>
-                <option value="8">Historia</option>
-                <option value="9">Matemática</option>
-                <option value="10">Português</option>
+                {%for subject in subjects %}
+                <!-- Toda vez que o nunjucks faz um for ele disponibiliza um index na variável loop.index -->
+                <option value="{{loop.index}}"  {{ "selected" if filters.subject == loop.index }}>{{subject}}</option>
+                {%endfor  %}
+
               </select>
             </div>
 
@@ -61,19 +56,26 @@
               <select name="weekday" id="weekday">
                 <option value="" disabled hidden>Selecione uma opção</option>
 
-                <option value="1">Segunda</option>
-                <option value="2">Terça</option>
-                <option value="3">Quarta</option>
-                <option value="4">Quinta</option>
-                <option value="5">Sexta</option>
-                <option value="6">Sábado</option>
-                <option value="7">Domingo</option>
+                {%for weekday in weekdays %}
+                <!-- Toda vez que o nunjucks faz um for ele disponibiliza um index na variável loop.index -->
+                <option value="{{loop.index0}}"  {{ "selected" if filters.weekday == loop.index }}>
+                  {{weekday}}
+                </option>
+                {%endfor  %}
+
               </select>
             </div>
 
             <div class="input-block">
               <label for="time">Horário</label>
-              <input type="time" name="time" id="time" nim="0" max="24" />
+              <input
+                type="time"
+                name="time"
+                id="time"
+                nim="0"
+                max="24"
+                value="{{filters.time}}"
+              />
             </div>
 
             <button type="submit">Filtrar</button>
