--- a/public/styles/partials/forms.css
+++ b/public/styles/partials/forms.css
@@ -46,3 +46,9 @@
   right: 1.6rem;
   bottom: 0;
 }
+
+label small {
+  font-size: 1.2rem;
+  padding-left: 0.8rem;
+  color: var(--color-small-info);
+}
